--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "yarn run parcel src/index.pug --port 3000",
+    "start": "yarn run parcel src/*.pug --port 3000",
     "build": "yarn run parcel build src/index.pug"
   },
   "keywords": [],
