--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start": "yarn run parcel src/*.pug --port 3000",
-    "build": "yarn run parcel build src/index.pug"
+    "build": "yarn run parcel build src/*.pug"
   },
   "keywords": [],
   "author": "",
