--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "parcel": "^2.8.3",
     "@parcel/transformer-pug": "^2.8.3",
     "@parcel/transformer-sass": "^2.8.3",
-    "@parcel/validator-typescript": "^2.8.3"
+    "@parcel/validator-typescript": "^2.8.3",
+    "parcel": "^2.8.3"
   },
   "devDependencies": {
     "@prettier/plugin-pug": "^2.5.0",
